# imgreg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_comprehensive.sh
include/: correlation_result.h  fft_correlator.h  image_correlator.h  memory_pool.h  pearson_correlator.h  performance_analyzer.h  spatial_correlator.h  thread_manager.h
src/: fft_correlator.cpp  generate_shifted.cpp  image_correlator.cpp  main.cpp  memory_pool.cpp  pearson_correlator.cpp  performance_analyzer.cpp  spatial_correlator.cpp  thread_manager.cpp
tests/: CMakeLists.txt  test_main.cpp
